Scraping/ALL/4992.txt
To : maintonly@bugs.debian.org
Subject : Bug#853489: libdebian-installer: ftbfs with GCC-7
From : Matthias Klose <doko@debian.org>
Date : Tue, 31 Jan 2017 09:32:50 +0000
Message-id : E1cYUny-0006vE-PU@paradis.debian.org
Reply-to : Matthias Klose <doko@debian.org>, 853489-maintonly@bugs.debian.org


Package: src:libdebian-installer
Version: 0.108
Severity: normal
Tags: sid buster
User: debian-gcc@lists.debian.org
Usertags: ftbfs-gcc-7
Please keep this issue open in the bug tracker for the package it
was filed for.  If a fix in another package is required, please
file a bug for the other package (or clone), and add a block in this
package. Please keep the issue open until the package can be built in
a follow-up test rebuild.
The package fails to build in a test rebuild on at least amd64 with
gcc-7/g++-7, but succeeds to build with gcc-6/g++-6. The
severity of this report may be raised before the buster release.
There is no need to fix this issue in time for the stretch release.
The full build log can be found at:
http://people.debian.org/~doko/logs/gcc7-20170126/libdebian-installer_0.108_unstable_gcc7.log
The last lines of the build log are at the end of this report.
To build with GCC 7, either set CC=gcc-7 CXX=g++-7 explicitly,
or install the gcc, g++, gfortran, ... packages from experimental.
  apt-get -t=experimental install g++ 
Common build failures are new warnings resulting in build failures with
-Werror turned on, or new/dropped symbols in Debian symbols files.
For other C/C++ related build failures see the porting guide at
http://gcc.gnu.org/gcc-7/porting_to.html
[...]
libtool: compile:  gcc -DHAVE_CONFIG_H -I. -I../../../src/system -I../../../include -I../../ -Wdate-time -D_FORTIFY_SOURCE=2 -Wall -W -Werror -ggdb -Wmissing-declarations -Os -fomit-frame-pointer -c ../../../src/system/efi.c  -fPIC -DPIC -o .libs/efi.o
libtool: compile:  gcc -DHAVE_CONFIG_H -I. -I../../../src/system -I../../../include -I../../ -Wdate-time -D_FORTIFY_SOURCE=2 -Wall -W -Werror -ggdb -Wmissing-declarations -Os -fomit-frame-pointer -c ../../../src/system/efi.c -o efi.o >/dev/null 2>&1
/bin/bash ../../libtool  --tag=CC   --mode=compile gcc -DHAVE_CONFIG_H -I. -I../../../src/system  -I../../../include -I../../ -Wdate-time -D_FORTIFY_SOURCE=2  -Wall -W -Werror -ggdb -Wmissing-declarations -Os -fomit-frame-pointer -c -o packages.lo ../../../src/system/packages.c
libtool: compile:  gcc -DHAVE_CONFIG_H -I. -I../../../src/system -I../../../include -I../../ -Wdate-time -D_FORTIFY_SOURCE=2 -Wall -W -Werror -ggdb -Wmissing-declarations -Os -fomit-frame-pointer -c ../../../src/system/packages.c  -fPIC -DPIC -o .libs/packages.o
libtool: compile:  gcc -DHAVE_CONFIG_H -I. -I../../../src/system -I../../../include -I../../ -Wdate-time -D_FORTIFY_SOURCE=2 -Wall -W -Werror -ggdb -Wmissing-declarations -Os -fomit-frame-pointer -c ../../../src/system/packages.c -o packages.o >/dev/null 2>&1
/bin/bash ../../libtool  --tag=CC   --mode=compile gcc -DHAVE_CONFIG_H -I. -I../../../src/system  -I../../../include -I../../ -Wdate-time -D_FORTIFY_SOURCE=2  -Wall -W -Werror -ggdb -Wmissing-declarations -Os -fomit-frame-pointer -c -o prebaseconfig.lo ../../../src/system/prebaseconfig.c
libtool: compile:  gcc -DHAVE_CONFIG_H -I. -I../../../src/system -I../../../include -I../../ -Wdate-time -D_FORTIFY_SOURCE=2 -Wall -W -Werror -ggdb -Wmissing-declarations -Os -fomit-frame-pointer -c ../../../src/system/prebaseconfig.c  -fPIC -DPIC -o .libs/prebaseconfig.o
libtool: compile:  gcc -DHAVE_CONFIG_H -I. -I../../../src/system -I../../../include -I../../ -Wdate-time -D_FORTIFY_SOURCE=2 -Wall -W -Werror -ggdb -Wmissing-declarations -Os -fomit-frame-pointer -c ../../../src/system/prebaseconfig.c -o prebaseconfig.o >/dev/null 2>&1
/bin/bash ../../libtool  --tag=CC   --mode=compile gcc -DHAVE_CONFIG_H -I. -I../../../src/system  -I../../../include -I../../ -Wdate-time -D_FORTIFY_SOURCE=2  -Wall -W -Werror -ggdb -Wmissing-declarations -Os -fomit-frame-pointer -c -o utils.lo ../../../src/system/utils.c
libtool: compile:  gcc -DHAVE_CONFIG_H -I. -I../../../src/system -I../../../include -I../../ -Wdate-time -D_FORTIFY_SOURCE=2 -Wall -W -Werror -ggdb -Wmissing-declarations -Os -fomit-frame-pointer -c ../../../src/system/utils.c  -fPIC -DPIC -o .libs/utils.o
libtool: compile:  gcc -DHAVE_CONFIG_H -I. -I../../../src/system -I../../../include -I../../ -Wdate-time -D_FORTIFY_SOURCE=2 -Wall -W -Werror -ggdb -Wmissing-declarations -Os -fomit-frame-pointer -c ../../../src/system/utils.c -o utils.o >/dev/null 2>&1
/bin/bash ../../libtool  --tag=CC   --mode=compile gcc -DHAVE_CONFIG_H -I. -I../../../src/system  -I../../../include -I../../ -Wdate-time -D_FORTIFY_SOURCE=2  -Wall -W -Werror -ggdb -Wmissing-declarations -Os -fomit-frame-pointer -c -o subarch-x86-linux.lo ../../../src/system/subarch-x86-linux.c
libtool: compile:  gcc -DHAVE_CONFIG_H -I. -I../../../src/system -I../../../include -I../../ -Wdate-time -D_FORTIFY_SOURCE=2 -Wall -W -Werror -ggdb -Wmissing-declarations -Os -fomit-frame-pointer -c ../../../src/system/subarch-x86-linux.c  -fPIC -DPIC -o .libs/subarch-x86-linux.o
libtool: compile:  gcc -DHAVE_CONFIG_H -I. -I../../../src/system -I../../../include -I../../ -Wdate-time -D_FORTIFY_SOURCE=2 -Wall -W -Werror -ggdb -Wmissing-declarations -Os -fomit-frame-pointer -c ../../../src/system/subarch-x86-linux.c -o subarch-x86-linux.o >/dev/null 2>&1
/bin/bash ../../libtool  --tag=CC   --mode=link gcc  -Wall -W -Werror -ggdb -Wmissing-declarations -Os -fomit-frame-pointer  -Wl,-z,relro -o libsystem.la  devfs.lo dpkg.lo efi.lo packages.lo prebaseconfig.lo utils.lo subarch-x86-linux.lo 
libtool: link: ar cru .libs/libsystem.a .libs/devfs.o .libs/dpkg.o .libs/efi.o .libs/packages.o .libs/prebaseconfig.o .libs/utils.o .libs/subarch-x86-linux.o 
ar: `u' modifier ignored since `D' is the default (see `U')
libtool: link: ranlib .libs/libsystem.a
libtool: link: ( cd ".libs" && rm -f "libsystem.la" && ln -s "../libsystem.la" "libsystem.la" )
make[5]: Leaving directory '/<<PKGBUILDDIR>>/build/src/system'
make[5]: Entering directory '/<<PKGBUILDDIR>>/build/src'
/bin/bash ../libtool  --tag=CC   --mode=compile gcc -DHAVE_CONFIG_H -I. -I../../src  -I../../include -I../ -Wdate-time -D_FORTIFY_SOURCE=2  -Wall -W -Werror -ggdb -Wmissing-declarations -Os -fomit-frame-pointer -c -o exec.lo ../../src/exec.c
libtool: compile:  gcc -DHAVE_CONFIG_H -I. -I../../src -I../../include -I../ -Wdate-time -D_FORTIFY_SOURCE=2 -Wall -W -Werror -ggdb -Wmissing-declarations -Os -fomit-frame-pointer -c ../../src/exec.c  -fPIC -DPIC -o .libs/exec.o
../../src/exec.c: In function 'internal_di_exec':
../../src/exec.c:161:26: error: this statement may fall through [-Werror=implicit-fallthrough=]
         files[1].handler = stderr_handler;
         ~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~
../../src/exec.c:162:7: note: here
       case 1:
       ^~~~
cc1: all warnings being treated as errors
Makefile:554: recipe for target 'exec.lo' failed
make[5]: *** [exec.lo] Error 1
make[5]: Leaving directory '/<<PKGBUILDDIR>>/build/src'
Makefile:569: recipe for target 'all-recursive' failed
make[4]: *** [all-recursive] Error 1
make[4]: Leaving directory '/<<PKGBUILDDIR>>/build/src'
Makefile:466: recipe for target 'all-recursive' failed
make[3]: *** [all-recursive] Error 1
make[3]: Leaving directory '/<<PKGBUILDDIR>>/build'
Makefile:373: recipe for target 'all' failed
make[2]: *** [all] Error 2
make[2]: Leaving directory '/<<PKGBUILDDIR>>/build'
dh_auto_build: make -j1 returned exit code 2
debian/rules:25: recipe for target 'override_dh_auto_build' failed
make[1]: *** [override_dh_auto_build] Error 2
make[1]: Leaving directory '/<<PKGBUILDDIR>>'
debian/rules:3: recipe for target 'build' failed
make: *** [build] Error 2
dpkg-buildpackage: error: debian/rules build gave error exit status 2